@@ -59,6 +59,7 @@ Test::More                = 0.94
 Test::Output              = 0.16
 Test::Script              = 1.07
 Test::Expect              = 0.30
+Test::Script::Run         = 0.03
 
 ; Set META.yml resources
 [MetaResources]
